k3s-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proshop-backend
  namespace: ecommerce
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proshop-backend
  template:
    metadata:
      labels:
        app: proshop-backend
    spec:
      nodeSelector:
        role: worker
      containers:
      - name: backend
        image: tienphat1147/proshop-backend:v1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "512Mi"
