k3s-manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proshop-backend
  namespace: ecommerce
spec:
  selector:
    app: proshop-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP
