k3s-manifest/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proshop-frontend
  namespace: ecommerce
spec:
  selector:
    app: proshop-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
