k3s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proshop-ingress
  namespace: ecommerce
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: web.group14.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proshop-frontend
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: proshop-backend
            port:
              number: 5000
